--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -25,3 +25,15 @@
 - name: release
   description: Anything related to an incoming release
   color: ffffff
+
+- name: testing
+  description: Anything related to testing
+  color: 5802B8
+
+- name: examples
+  description: Anything related to the examples
+  color: 3C2E5F
+
+- name: security
+  description: Anything related to security advisories
+  color: FF0000
