--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,9 @@
+ci:
+    autofix_commit_msg: 'CHORE: Auto fixes from pre-commit hooks'
+    autoupdate_branch: 'chore/pre-commit-autoupdate'
+    autoupdate_commit_msg: 'CHORE: Pre-commit automatic update'
+    autoupdate_schedule: weekly
+
 exclude: |
     (?x)(
         src/ansys/aedt/toolkits/common/ui/utils/ui_templates/.* |
@@ -10,34 +16,64 @@ exclude: |
 repos:
 
 - repo: https://github.com/psf/black
-  rev: 24.1.1  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
+  rev: 25.1.0  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
   hooks:
-  - id: black
-    args:
-      - --line-length=120
-
-- repo: https://github.com/asottile/blacken-docs
-  rev: 1.16.0
-  hooks:
-  -   id: blacken-docs
-      additional_dependencies: [black==24.1.1]
+    - id: black
+      args:
+        - --line-length=120
 
 - repo: https://github.com/pycqa/isort
-  rev: 5.13.2
+  rev: 6.0.1
   hooks:
     - id: isort
       name: isort (python)
       args: ['--force-single-line-imports', '--profile', 'black']
 
 - repo: https://github.com/PyCQA/flake8
-  rev: 7.0.0
+  rev: 7.2.0
   hooks:
-  - id: flake8
-    args:
-      - --max-line-length=120
+    - id: flake8
+      args:
+        - --max-line-length=120
 
 - repo: https://github.com/codespell-project/codespell
-  rev: v2.2.6
+  rev: v2.4.1
   hooks:
-  - id: codespell
-    args: ["--ignore-words=doc/styles/config/vocabularies/ANSYS/accept.txt"]
+    - id: codespell
+      args: ["--ignore-words", "doc/styles/config/vocabularies/ANSYS/accept.txt"]
+      additional_dependencies:
+        - tomli
+
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v5.0.0
+  hooks:
+    - id: debug-statements
+    - id: trailing-whitespace
+
+# validate GitHub workflow files
+- repo: https://github.com/python-jsonschema/check-jsonschema
+  rev: 0.33.0
+  hooks:
+    - id: check-github-workflows
+
+- repo: https://github.com/asottile/blacken-docs
+  rev: 1.19.1
+  hooks:
+    - id: blacken-docs
+      additional_dependencies: [black==25.1.0]
+
+# This validates our pre-commit.ci configuration
+- repo: https://github.com/pre-commit-ci/pre-commit-ci-config
+  rev: v1.6.1
+  hooks:
+    - id: check-pre-commit-ci-config
+
+- repo: https://github.com/ansys/pre-commit-hooks
+  rev: v0.4.4
+  hooks:
+    - id: add-license-headers
+      files: '(src|examples|tests)/.*\.(py)'
+      args:
+      - --custom_template=mit_license.jinja2
+      - --start_year=2023
+
