--- a/examples/toolkit/pyaedt_toolkit/ui/frontend_properties.toml
+++ b/examples/toolkit/pyaedt_toolkit/ui/frontend_properties.toml
@@ -6,7 +6,7 @@ debug= false
 app_name= "Example Wizard"
 main_title= "Amazing Toolkit Wizard"
 welcome_message= "Welcome to the amazing toolkit"
-version= "v0.0.1"
+version= "example_toolkit_version"
 copyright= "By: slopez"
 year= 2023
 theme= "ansys_dark.json"
