Fix logger. This has to be updated in the other toolkits.

--- a/examples/toolkit/pyaedt_toolkit/ui/frontend_properties.toml
+++ b/examples/toolkit/pyaedt_toolkit/ui/frontend_properties.toml
@@ -2,7 +2,7 @@
 toolkit_name= "example"
 backend_url= "127.0.0.1"
 backend_port= 5001
-debug= false
+debug= true
 app_name= "Example Wizard"
 main_title= "Amazing Toolkit Wizard"
 welcome_message= "Welcome to the amazing toolkit"
