BUILD: Add pytest-qt test dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ tests = [
     "flask",
     "pytest>=7.4.0,<8.5",
     "pytest-cov>=4.0.0,<6.2",
+    "pytest-qt>=4.0.0,<4.5"
 ]
 doc = [
     "pyaedt[all]>=0.15.2",
