--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ all = [
 tests = [
     "pyaedt[all]>=0.15.2",
     "flask",
+    "pyside6==6.9.0",
     "pytest>=7.4.0,<8.5",
     "pytest-cov>=4.0.0,<6.3",
     "pytest-qt>=4.0.0,<4.5"
