--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ all = [
     "pyside6==6.9.0",
     "pyqtgraph",
     "qdarkstyle",
-    "pyvistaqt",
+    "pyvistaqt>=0.10,<0.11.3",
 ]
 tests = [
     "pyaedt[all]>=0.15.2",
@@ -47,7 +47,8 @@ tests = [
     "pyside6==6.9.0",
     "pytest>=7.4.0,<8.5",
     "pytest-cov>=4.0.0,<6.3",
-    "pytest-qt>=4.0.0,<4.5"
+    "pytest-qt>=4.0.0,<4.5",
+    "pyvistaqt>=0.10,<0.11.3"
 ]
 doc = [
     "pyaedt[all]>=0.15.2",
