REFACTOR: improve example and test UI (#276)
Co-authored-by: pyansys-ci-bot <92810346+pyansys-ci-bot@users.noreply.github.com>
Co-authored-by: Samuelopez-ansys <samuel.lopez@ansys.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,13 +39,16 @@ all = [
     "pyside6==6.9.0",
     "pyqtgraph",
     "qdarkstyle",
-    "pyvistaqt",
+    "pyvistaqt>=0.10,<0.11.3",
 ]
 tests = [
     "pyaedt[all]>=0.15.2",
     "flask",
+    "pyside6==6.9.0",
     "pytest>=7.4.0,<8.5",
     "pytest-cov>=4.0.0,<6.3",
+    "pytest-qt>=4.0.0,<4.5",
+    "pyvistaqt>=0.10,<0.11.3"
 ]
 doc = [
     "pyaedt[all]>=0.15.2",
