--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -102,7 +102,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-    - uses: ansys/actions/doc-changelog@v10
+    - uses: ansys/actions/doc-changelog@54d45960ae9d009b2a3f26dfa687f611a85c6da3 # v10.0.11
       with:
         token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
         use-conventional-commits: true
