--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -283,14 +283,11 @@ jobs:
           export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
           source .venv_linux/bin/activate
           pytest -v -m utils
-
       - name: Test UI
         timeout-minutes: 5
         run: |
-          .\.venv\Scripts\Activate.ps1
-
+          source .venv_linux/bin/activate
           pytest -v -m ui --cov --cov-append
-
       - name: "Upload coverage results"
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
