CI: Pin vtk-osmesa version

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -20,7 +20,7 @@ help:
 		@echo "Removing vtk to avoid conflicts with vtk-osmesa needed for CI/CD"; \
 		pip uninstall --yes vtk; \
 		@echo "Installing vtk-osmesa"; \
-		pip install --extra-index-url https://wheels.vtk.org vtk-osmesa; \
+		pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.1; \
 	fi
 
 # Catch-all target: route all unknown targets to Sphinx using the new
