--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ doc = [
     "pyaedt[all]>=0.15.2",
     "recommonmark>=0.7.0,<0.8",
     "pyside6==6.9.1",
-    "ansys-sphinx-theme>=0.10.0,<1.4",
+    "ansys-sphinx-theme==1.5.3",
     "numpydoc>=1.5.0,<1.10",
     "Sphinx>=7.1.0,<8.3",
     "sphinx-copybutton>=0.5.0,<0.6",
