--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ doc = [
     "ipython>=8.13.0,<9.1",
     "jupyterlab>=4.0.0,<4.5",
     "pypandoc>=1.10.0,<1.16",
+    "ipywidgets"
 ]
 
 [tool.flit.module]
