--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,25 +36,25 @@ dependencies = [
 all = [
     "pyaedt[all]>=0.15.2",
     "flask",
-    "pyside6==6.9.0",
+    "pyside6==6.9.2",
     "pyqtgraph",
     "qdarkstyle",
-    "pyvistaqt>=0.10,<0.11.3",
+    "ansys-tools-visualization-interface[pyvistaqt]"
 ]
 tests = [
     "pyaedt[all]>=0.15.2",
     "flask",
-    "pyside6==6.9.0",
+    "pyside6==6.9.2",
     "pytest>=7.4.0,<8.5",
     "pytest-cov>=4.0.0,<6.3",
     "pytest-qt>=4.0.0,<4.6",
-    "pyvistaqt>=0.10,<0.11.3"
+    "ansys-aedt-toolkits-common[all]",
 ]
 doc = [
-    "pyaedt[all]>=0.15.2",
+    "ansys-aedt-toolkits-common[all]",
     "recommonmark>=0.7.0,<0.8",
-    "pyside6==6.9.0",
-    "ansys-sphinx-theme>=0.10.0,<1.4",
+    "pyside6==6.9.2",
+    "ansys-sphinx-theme==1.6.0",
     "numpydoc>=1.5.0,<1.10",
     "Sphinx>=7.1.0,<8.3",
     "sphinx-copybutton>=0.5.0,<0.6",
@@ -66,6 +66,7 @@ doc = [
     "ipython>=8.13.0,<9.1",
     "jupyterlab>=4.0.0,<4.5",
     "pypandoc>=1.10.0,<1.16",
+    "ipywidgets",
 ]
 
 [tool.flit.module]
