CI: Remove caching from wheelhouse

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -151,7 +151,9 @@ jobs:
           library-name: ${{ env.LIBRARY_NAME }}
           operating-system: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
-
+          target: 'all'
+          use-python-cache: false
+          
   tests_windows:
     name: "Windows Tests"
     runs-on: [self-hosted, Windows, pyaedt-toolkit]
