CI: Remove caching from wheelhouse (#335)
Co-authored-by: pyansys-ci-bot <92810346+pyansys-ci-bot@users.noreply.github.com>
Co-authored-by: Massimo Capodiferro <77293250+maxcapodi78@users.noreply.github.com>

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -151,6 +151,8 @@ jobs:
           library-name: ${{ env.LIBRARY_NAME }}
           operating-system: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
+          target: 'all'
+          use-python-cache: false
 
   tests_windows:
     name: "Windows Tests"
