--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -313,9 +313,11 @@ jobs:
 
       - name: Test EDB API
         timeout-minutes: 5
+        env:
+          MONO_DIR: ${{ env.ANSYSEM_ROOT252 }}/common/mono/Linux64/lib64
         run: |
-          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT252 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
           source .venv_linux/bin/activate
+          python scripts/preload_mono_libs.py
           pytest -v -m edb_api --cov --cov-append
 
       - name: Test REST API
