ci: Fix anonymous-definition of commenter job in label.yml

--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -78,6 +78,7 @@ jobs:
         labels: testing
 
   commenter:
+    name: Suggest labels if none assigned
     runs-on: ubuntu-latest
     steps:
     - name: Suggest to add labels
@@ -94,7 +95,6 @@ jobs:
           - [good first issue](https://github.com/pyansys/pyaedt-toolkits.git/pulls?q=label%3Agood+first+issue)
           - [maintenance](https://github.com/pyansys/pyaedt-toolkits.git/pulls?q=label%3Amaintenance+)
           - [release](https://github.com/pyansys/pyaedt-toolkits.git/pulls?q=label%3Arelease+)
-
 
   changelog-fragment:
     name: "Create changelog fragment"
