ci: Apply updates suggested in code reviews from related PRs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,17 +27,13 @@ updates:
     commit-message:
       prefix: "BUILD(pip)"
 
-  - package-ecosystem: "github-actions"
+  - package-ecosystem: "github-actions" # zizmor: ignore[dependabot-cooldown] cooldown feature is not available for github actions yet.
     directory: "/"
     schedule:
       interval: "weekly"
       day: "saturday"
       time: "06:00"
       timezone: "Europe/Paris"
-    cooldown:
-      default-days: 7
-      include:
-        - "*"  # Include all dependencies in cooldown
     reviewers:
       - "Samuelopez-ansys"
     assignees:
